docs: 更新 Android 核心文档内容
- 补充 Activity 启动流程文档，新增关键类说明和详细流程
- 扩展 Handler 机制详解文档内容
- 完善 JVM 内存、GC 和类加载相关文档